# market-intel

./: .dockerignore  .env.example  .gitignore  Dockerfile.crond  Dockerfile.ml  config.yaml  data.md  docker-compose.yml  go.mod  requirements.ml-worker.txt  requirements.txt  scaling.md
cmd/crond/: main.go
data_sources_probe/: probe_f14_macro_calendar.py  probe_f1_price_forecast.py  probe_f2_political.py  probe_f3_sentiment.py  probe_f5_fred.py  probe_f7_sec_edgar.py  probe_f9_fedwatch.py
deployment/sql/: init.sql
docs/: forward.md  plan.md
index/: sprint1.md  sprint1_test.md  sprint2_interview.md  sprint2_test.md  sprint3_interview.md  sprint3_test.md  sprint4_interview.md  sprint4_test.md
internal/api/: api_test.go  handlers.go  middleware.go  server.go
internal/executor/: executor.go  executor_test.go  http.go  kafka.go  shell.go
internal/raft/: persister.go  raft.go  rpc.go  test_test.go
internal/scheduler/: recovery.go  scheduler.go  scheduler_test.go
internal/store/: router.go  snapshot.go  store.go  store_test.go  types.go
ml/: __init__.py  worker.py
ml/db/: __init__.py  redis_client.py  timescale.py
ml/indicators/: CMakeLists.txt  bindings.cpp  indicators.cpp
ml/jobs/: __init__.py  _base.py  compute_indicators.py  fetch_quotes.py  run_predictions.py
ml/models/: __init__.py  ensemble.py  prophet_model.py
pkg/cron/: parser.go  parser_test.go
scripts/: build_indicators.sh  init_topics.sh  seed_jobs.sh
